dark mode fixes III

--- a/src/style-short.css
+++ b/src/style-short.css
@@ -79,7 +79,7 @@ body {
 	line-height: 1.3;
 	color: #212529;
 	text-align: left;
-	background-color: #fff;
+	background-color: #00a4b5;
 }
 
 h2 {
